# Fae

./: .gitattributes  .gitignore  .hlint.yaml  Blockchain-Fae-Contracts.html  Blockchain-Fae-Currency.html  Blockchain-Fae-FrontEnd.html  Blockchain-Fae-Internal-Block.html  Blockchain-Fae-Internal-Contract.html  Blockchain-Fae-Internal-Coroutine.html  Blockchain-Fae-Internal-Crypto.html  Blockchain-Fae-Internal-Exceptions.html  Blockchain-Fae-Internal-GenericInstances.html  Blockchain-Fae-Internal-GetInputValues.html  Blockchain-Fae-Internal-IDs-Types.html  Blockchain-Fae-Internal-IDs.html  Blockchain-Fae-Internal-Lens.html  Blockchain-Fae-Internal-Messages.html  Blockchain-Fae-Internal-MonadFae.html  Blockchain-Fae-Internal-Monitors.html  Blockchain-Fae-Internal-NFData.html  Blockchain-Fae-Internal-PrettyFae.html  Blockchain-Fae-Internal-Reward.html  Blockchain-Fae-Internal-Serialization.html  Blockchain-Fae-Internal-Storage.html  Blockchain-Fae-Internal-Suspend.html  Blockchain-Fae-Internal-TX.html  Blockchain-Fae-Internal-TXSummary.html  Blockchain-Fae-Internal-Transaction.html  Blockchain-Fae-Internal-Versions.html  Blockchain-Fae-Internal.html  Blockchain-Fae.html  LICENSE  README.md  fae.cabal  index.html  stack.yaml
common/Common/: JSON.hs  Lens.hs  ProtocolT.hs
demos/: Auction.hs  AuctionTX1  Bid  Bid.hs  GetCoin  GetMoreCoins  GetMoreCoins.hs  HelloWorld1  HelloWorld1.hs
demos/Auction/: Auction.hs  Bid  Bid.hs  Collect  Collect.hs  Create  Create.hs  Withdraw  Withdraw.hs
demos/GetCoins/: GetCoin  GetCoin.hs  GetMoreCoins  GetMoreCoins.hs
demos/HelloWorld1/: HelloWorld1  HelloWorld1.hs  HelloWorld1.md
demos/HelloWorld2/: CallHelloWorld2  CallHelloWorld2.hs  HelloWorld2  HelloWorld2.hs  HelloWorld2.md
demos/Swap/: CreateSwap  CreateSwap.hs  GetOffering  GetOffering.hs  GiveOpinion  GiveOpinion.hs
demos/seminar/: Renaming1.hs  Renaming2  Renaming2.hs
demos/talk-3/: FaethService  FaethService.hs  alice  bob  bob-fae  cmd1  cmd2  dev-address  user-address
docker/faeServer/: .dockerignore  Dockerfile  build  build.sh  faeServer.sh  known_hosts
docker/faeServer/etc/: faeServer.cmd  faeServer.sh
docker/postTX/: .dockerignore  Dockerfile  build  postTX.cmd  postTX.sh
docker/postTX/etc/: .dockerignore  postTX.cmd  postTX.sh
docs/: Specification.md
documentation/: FAQ.html  FAQ.md  project-information.html
documentation/design/: architecture.html  architecture.md  claims.html  faeth.html  faeth.md  functional-principles.html  functional-principles.md  import-export.html  import-export.md  specification.html  specification.md
documentation/tutorial/: reference-manual.html  reference-manual.md  tutorial-1.html  tutorial-1.md  tutorial-2.html  tutorial-2.md  tutorial-3.html  tutorial-3.md
documentation/tutorial/tutorial-1/: CallHelloWorld2  CallHelloWorld3  HelloWorld  HelloWorld2a  HelloWorld2a.hs  HelloWorld3  HelloWorld3.hs  HelloWorld4  HelloWorld4.hs
documentation/tutorial/tutorial-2/: CallEscrow1  CallEscrow1.hs  CallEscrow3  CallEscrow3.hs  CallRewardNametag  CallRewardNametag.hs  Escrow1  Escrow1.hs  Escrow2  Escrow2.hs  Escrow3  Escrow3.hs  Nametag.hs  RewardNametag  RewardNametag.hs
documentation/tutorial/tutorial-3/: EnterLottery  EnterLottery.hs  ExitLottery  ExitLottery.hs  Lottery.hs  Nametag.hs  NewLottery  NewLottery.hs  RewardNametag  RewardNametag.hs
documentation/tutorial/txs-1/: CallHelloWorld4  HelloWorld.hs  HelloWorld2.hs
documentation/tutorial/txs-1/tex/: tutorial-1.tex
documentation/tutorial/txs-2/tex/: tutorial-2.tex
documentation/tutorial/txs-3/: BuyNametag  BuyNametag.hs  BuyNametag2  BuyNametag2.hs  DepositZeroCoin  DepositZeroCoin.hs  GetCoin  InstallNametag  InstallNametag.hs  RunNametagFactory  RunNametagFactory.hs  SellNametag  SellNametag.hs  TradeNametags  TradeNametags.hs
documentation/tutorial/txs-3/latex/: tutorial-3.tex
examples/: BCoin.hs  Contracts.hs  MultiSig.hs
samples/Blockchain.Fae.Currency/: ChangeCoin  ChangeCoin.hs  GetCoin  GetCoin.hs  RoundCoin  RoundCoin.hs  SplitCoin  SplitCoin.hs  ZeroCoin  ZeroCoin.hs
samples/Blockchain.Fae/escrows/: ReturnEscrowID1  ReturnEscrowID1.hs  ReturnEscrowID2  ReturnEscrowID2.hs
samples/Blockchain.Fae/materials/: AggregateInputs  AggregateInputs.hs  MaterialAssignments1  MaterialAssignments1.hs  MaterialAssignments2  MaterialAssignments2.hs  PayMaterial1  PayMaterial1.hs  PayMaterial2  PayMaterial2.hs
samples/Blockchain.Fae/renaming/: Renaming1  Renaming1.hs  Renaming2
samples/Blockchain.Fae/timeouts/: Timeout1  Timeout1.hs  Timeout2  Timeout2.hs
scripts/: CurlTX.hs
src/Blockchain/: Fae.hs
src/Blockchain/Fae/: Contracts.hs  Crypto.hs  Currency.hs  FrontEnd.hs  Internal.hs
src/Blockchain/Fae/Contracts/: Currency.hs
src/Blockchain/Fae/Internal/: Block.hs  Contract.hs  Coroutine.hs  Crypto.hs  Escrow.hs  Exceptions.hs  Fae.hs  GenericInstances.hs  GetInputValues.hs  IDs.hs  Interpreter.hs  Lens.hs  Messages.hs  MonadFae.hs  Monads.hs  Monitors.hs  NFData.hs  PrettyFae.hs  Reward.hs  Serialization.hs  (+7 more)
test/: Contract1.hs  Contract1TX1.hs  Contract1TX2.hs  Contract2.hs  Escrow1.hs  Escrow1TX1.hs  Escrow1TX2.hs  Escrow2.hs  Escrow2TX1.hs  Escrow2TX2.hs  Escrow3.hs  HelloWorld.hs  HelloWorldTX.hs  Interpret.hs  PrivateTypesTX2.hs  TwoParty.hs  TwoPartyCommon.hs  TwoPartyTX1.hs  TwoPartyTX2.hs  TwoPartyTX3.hs  TwoPartyTX4.hs  TwoPartyTX5.hs  TwoPartyTX6.hs  TwoPartyTX7.hs
tools/: CollectPackage.hs  PackageInfo.hs
txs/: .gitignore  Acquaintance  Acquaintance.hs  CallCallLoopContract  CallCallLoopContract.hs  CallDuplicateInputs  CallDuplicateInputs.hs  CallDuplicateInputsOutputs  CallDuplicateInputsOutputs.hs  CallLoopContract  CallLoopContract.hs  CallParent  Contract1TX1  Contract1TX1.hs  Contract1TX2  Contract1TX2.hs  DuplicateInputs  DuplicateInputs.hs  Error  Error.hs  ErrorCall  ErrorCall.hs  Escrow1TX1  Escrow1TX1.hs  Escrow1TX2  Escrow1TX2.hs  Escrow2TX1  Escrow2TX1.hs  Escrow2TX2  Escrow2TX2.hs  FaethAddSignature  FallbackTX1  FallbackTX1.hs  FallbackTX2  FallbackTX2.hs  GetSecret  GetSecret.hs  HelloWorldTX  HelloWorldTX.hs  Loop  (+44 more)
(+1 files in other folders)
