name:                fae
version:             0.9.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Consensys/Fae
license:             BSD3
license-file:        LICENSE
author:              Ryan Reich
maintainer:          ryan.reich@consensys.net
copyright:           MIT
category:            none
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    Blockchain.Fae
    Blockchain.Fae.FrontEnd
    Blockchain.Fae.Internal
    Blockchain.Fae.Contracts
    Blockchain.Fae.Currency
  other-modules:
    Blockchain.Fae.Internal.Block
    Blockchain.Fae.Internal.Contract
    Blockchain.Fae.Internal.Coroutine
    Blockchain.Fae.Internal.Crypto
    Blockchain.Fae.Internal.Exceptions
    Blockchain.Fae.Internal.IDs
    Blockchain.Fae.Internal.Lens
    Blockchain.Fae.Internal.MonadFae
    Blockchain.Fae.Internal.Reward
    Blockchain.Fae.Internal.Storage
    Blockchain.Fae.Internal.Transaction
    Blockchain.Fae.Internal.TX
  build-depends:       
    base >= 4.7 && < 5,
    base16-bytestring,
    bytestring,
    cereal,
    containers,
    cryptonite >= 0.24,
    deepseq,
    exceptions,
    filepath,
    hint,
    lens,
    memory,
    monad-coroutine,
    mtl,
    template-haskell,
    text,
    transformers
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DefaultSignatures
    DeriveGeneric
    EmptyDataDecls,
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternGuards
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

executable faeServer
  buildable: True
  hs-source-dirs:      bin
  main-is:             FaeServer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
    base, 
    bytestring,
    cereal,
    containers,
    deepseq,
    directory,
    fae,
    filepath,
    http-types,
    stm,
    transformers,
    unix,
    wai,
    wai-extra,
    warp
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
  
-- test-suite fae-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , fae
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
--source-repository head
--  type:     git
--  location: https://github.com/

