name:                fae
version:             0.9.9.9
-- synopsis:
-- description:
homepage:            https://github.com/Consensys/Fae
license:             BSD3
license-file:        LICENSE
author:              Ryan Reich
maintainer:          ryan.reich@consensys.net
copyright:           MIT
category:            none
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag static
  description: Build postTX statically linked.
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     
    Blockchain.Fae
    Blockchain.Fae.FrontEnd
    Blockchain.Fae.Internal
    Blockchain.Fae.Contracts
    Blockchain.Fae.Currency
  other-modules:
    Blockchain.Fae.Internal.Block
    Blockchain.Fae.Internal.Contract
    Blockchain.Fae.Internal.Coroutine
    Blockchain.Fae.Internal.Crypto
    Blockchain.Fae.Internal.Exceptions
    Blockchain.Fae.Internal.GenericInstances
    Blockchain.Fae.Internal.GetInputValues
    Blockchain.Fae.Internal.IDs
    Blockchain.Fae.Internal.IDs.Types
    Blockchain.Fae.Internal.Lens
    Blockchain.Fae.Internal.NFData
    Blockchain.Fae.Internal.Reward
    Blockchain.Fae.Internal.Storage
    Blockchain.Fae.Internal.Transaction
    Blockchain.Fae.Internal.TX
    Blockchain.Fae.Internal.Versions
  build-depends:       
    base >= 4.10 && < 5,
    base16-bytestring,
    bytestring,
    cereal,
    containers,
    cryptonite >= 0.24,
    deepseq,
    exceptions,
    filepath,
    hint,
    lens,
    memory,
    monad-coroutine,
    mtl,
    template-haskell,
    text,
    transformers
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DefaultSignatures
    DeriveGeneric
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternGuards
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

executable faeServer
  buildable: True
  hs-source-dirs:      bin
  main-is:             FaeServer.hs
  ghc-options:         -dynamic -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    FaeServer.App
    FaeServer.Concurrency
    FaeServer.Fae
    FaeServer.Git
    FaeServer.History
    FaeServer.Modules
  build-depends:       
    base, 
    bytestring,
    cereal,
    containers,
    deepseq,
    directory,
    fae,
    filepath,
    http-types,
    mtl,
    process,
    stm,
    transformers,
    unix,
    wai,
    wai-extra,
    warp
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications

executable postTX
  buildable: True
  hs-source-dirs: bin
  main-is: PostTX.hs
  if flag(static)
    ld-options: -static
    ghc-options: -fPIC
  build-depends:
    base,
    bytestring,
    directory,
    fae,
    http-client,
    lens,
    process
  default-language: Haskell2010
  default-extensions:
    RankNTypes
    RecordWildCards
    NamedFieldPuns
    OverloadedStrings
    TupleSections

-- test-suite fae-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , fae
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
--source-repository head
--  type:     git
--  location: https://github.com/

